--- a/www/index2.html
+++ b/www/index2.html
@@ -1,5 +1,7 @@
 <html>
 <!-- <meta http-equiv="refresh" content="5; url=http://s27412.vdi.mipt.ru"> -->
+
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <body><h1>Локализация затенений радужки</h1>
 <p> Данный ресурс посвящён методу локализации затенений на изображении радужки. </p>
 <p> Более подробно про метод можно прочитать в <a href = "./article.pdf"> статье</a>. </p>
